Fix Maven standard project structure21245895

--- a/bankapp-devsecops/Jenkinsfile
+++ b/bankapp-devsecops/Jenkinsfile
@@ -147,7 +147,15 @@ pipeline {
             }
         }
 
-        stage('Push Docker Image') {
-            steps {
-                withDockerRegistry(
-                    credentialsId: 'doc
+       stage('Push Docker Image') {
+    steps {
+        withDockerRegistry(
+            credentialsId: 'docker-cred-id',
+            url: "${REGISTRY_URL}"
+        ) {
+            sh """
+              docker push ${IMAGE_NAME}:${IMAGE_TAG}
+            """
+        }
+    }
+}
