Fix Maven standard project structure27985865

--- a/bankapp-devsecops/Jenkinsfile
+++ b/bankapp-devsecops/Jenkinsfile
@@ -159,7 +159,7 @@ pipeline {
                   trivy image --format table -o image.html \
                   ${IMAGE_NAME}:${IMAGE_TAG}
 
-                  trivy image --exit-code 1 --severity HIGH,CRITICAL \
+                  trivy image --exit-code 1 --severity CRITICAL \
                   ${IMAGE_NAME}:${IMAGE_TAG}
                 """
             }
